--- a/SettingsDll_Test/SettingsDll_Test.vbproj
+++ b/SettingsDll_Test/SettingsDll_Test.vbproj
@@ -1,12 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>
     </ProductVersion>
-    <SchemaVersion>
-    </SchemaVersion>
+    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E5B39760-857F-4F58-A535-B0C33E191400}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>FloseCode.Tests.SettingsDll</RootNamespace>
@@ -17,14 +16,12 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>SettingsDll_Test.xml</DocumentationFile>
-    <NoWarn>
-    </NoWarn>
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
+    <AdditionalParameters />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,21 +30,11 @@
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DocumentationFile>SettingsDll_Test.xml</DocumentationFile>
-    <NoWarn>
-    </NoWarn>
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionExplicit>On</OptionExplicit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionCompare>Binary</OptionCompare>
+    <AdditionalParameters />
   </PropertyGroup>
   <PropertyGroup>
     <OptionStrict>On</OptionStrict>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionInfer>Off</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -104,9 +91,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SettingsDll\SettingsDll.vbproj">
-      <Project>{2F9D79E6-1F52-415C-8876-BA1C8A021758}</Project>
-      <Name>SettingsDll</Name>
+    <ProjectReference Include="..\SettingsDllC\SettingsDllC.csproj">
+      <Project>{DD2E2642-E707-443F-8BD8-1CE6FE2F79F4}</Project>
+      <Name>SettingsDllC</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
