--- a/SettingsDll_Test/SettingsDll_Test.vbproj
+++ b/SettingsDll_Test/SettingsDll_Test.vbproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -91,7 +91,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SettingsDllC\SettingsDll.csproj">
+    <ProjectReference Include="..\SettingsDll\SettingsDll.csproj">
       <Project>{DD2E2642-E707-443F-8BD8-1CE6FE2F79F4}</Project>
       <Name>SettingsDll</Name>
     </ProjectReference>
