--- a/SettingsDll_Test/SettingsDll_Test.vbproj
+++ b/SettingsDll_Test/SettingsDll_Test.vbproj
@@ -53,8 +53,9 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Test_Empty_File.vb" />
     <Compile Include="UnitTestUtilities.vb" />
-    <Compile Include="clsSettingsTests.vb" />
+    <Compile Include="Test_File.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
