Make nuget package

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ obj/
 TestResult.xml
 *.userprefs
 *.pidb
+
+# Ignore NuGet Packages
+*.nupkg
+# Ignore the packages folder
+**/packages/*
+# except build/, which is used as an MSBuild target.
+!**/packages/build/
