Add configuration for .net20 and .net40, add both to nupkg
Run make_package.bat to build the release configurations and pack the nupkg

--- a/SettingsLib/SettingsLib.nuspec
+++ b/SettingsLib/SettingsLib.nuspec
@@ -13,4 +13,8 @@
     <copyright>Copyright Flose 2016</copyright>
     <tags>Setting library</tags>
   </metadata>
+  <files>
+    <file src="bin\Release20\$id$.dll" target="lib\net20\" />
+    <file src="bin\Release40\$id$.dll" target="lib\net40\" />
+  </files>
 </package>
