Set nuget title

--- a/SettingsLib/SettingsLib.nuspec
+++ b/SettingsLib/SettingsLib.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>FloseCode.SettingsLib</id>
     <version>$version$</version>
-    <title>$title$</title>
+    <title>Settings Library</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
     <projectUrl>https://www.mal-was-anderes.de</projectUrl>
